# penguin-vl-ncnn

./: .gitignore  CMakeLists.txt  NOTICE  PENGUIN_VL_NCNN_技术报告.md  README.md  model.example.json
.github/workflows/: ci.yml
assets/: README.md
docs/: ALIGNMENT.md  DISCUSSION.md  EXPORT.md  PRODUCTION_TEST.md  SELFTEST.md  TESTREPORT.md
docs/validation/: 2026-07-15-windows-wsl.md
src/: image_preprocess.cpp  image_preprocess.h  json_min.cpp  json_min.h  main.cpp  penguin_config.cpp  penguin_config.h  penguin_vision.cpp  penguin_vision.h  penguin_vl.cpp  penguin_vl.h
tests/: test_json.cpp  test_main.cpp  test_preprocess.cpp  test_rope2d.cpp  test_tokenizer.cpp  test_util.h
tools/: align_check.py  compare_reference.py  export_decoder_kvcache.py  export_penguinvl.py  extract_tokenizer.py  rename_decoder_blobs.py  run_full_test.ps1  selftest_export.py  test_unfused_rope.py  tok_selftest.cpp  torch_greedy.py  torch_image.py  upload_to_hf.py  vision_selftest.cpp
